// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots 1 - Charts Bar Chart 1`] = `
<svg
  fontSize={2}
  fontWeight={500}
  preserveAspectRatio="xMidYMax meet"
  viewBox="0 0 100 54"
  width="100%"
>
  <svg
    fill="#fa6479"
    y={0}
  >
    <g>
      <text
        y={3.5}
      >
        WFLA
      </text>
      <text
        dy={3.5}
        x={50.89041095890411}
      >
        20.8
      </text>
    </g>
    <path
      d="M10,0 h39.89041095890411"
      stroke="#fa6479"
      strokeWidth={12}
    />
  </svg>
  <svg
    fill="#cb91a0"
    y={6}
  >
    <g>
      <text
        y={3.5}
      >
        Region A
      </text>
      <text
        dy={3.5}
        x={79.46575342465755}
      >
        35.7
      </text>
    </g>
    <path
      d="M10,0 h68.46575342465755"
      stroke="#cb91a0"
      strokeWidth={12}
    />
  </svg>
  <svg
    fill="#a38ca4"
    y={12}
  >
    <g>
      <text
        y={3.5}
      >
        Region B
      </text>
      <text
        dy={3.5}
        x={41.301369863013704}
      >
        15.8
      </text>
    </g>
    <path
      d="M10,0 h30.3013698630137"
      stroke="#a38ca4"
      strokeWidth={12}
    />
  </svg>
  <svg
    fill="#7482aa"
    y={18}
  >
    <g>
      <text
        y={3.5}
      >
        Region C
      </text>
      <text
        dy={3.5}
        x={89.43835616438356}
      >
        40.9
      </text>
    </g>
    <path
      d="M10,0 h78.43835616438356"
      stroke="#7482aa"
      strokeWidth={12}
    />
  </svg>
  <svg
    fill="#35aeb7"
    y={24}
  >
    <g>
      <text
        y={3.5}
      >
        Region D
      </text>
      <text
        dy={3.5}
        x={56.26027397260275}
      >
        23.6
      </text>
    </g>
    <path
      d="M10,0 h45.26027397260275"
      stroke="#35aeb7"
      strokeWidth={12}
    />
  </svg>
  <svg
    fill="#01b25c"
    y={30}
  >
    <g>
      <text
        y={3.5}
      >
        Region E
      </text>
      <text
        dy={3.5}
        x={44.753424657534254}
      >
        17.6
      </text>
    </g>
    <path
      d="M10,0 h33.753424657534254"
      stroke="#01b25c"
      strokeWidth={12}
    />
  </svg>
  <svg
    fill="#e1c54e"
    y={36}
  >
    <g>
      <text
        y={3.5}
      >
        Region F
      </text>
      <text
        dy={3.5}
        x={84.06849315068494}
      >
        38.1
      </text>
    </g>
    <path
      d="M10,0 h73.06849315068494"
      stroke="#e1c54e"
      strokeWidth={12}
    />
  </svg>
  <svg
    fill="#f89764"
    y={42}
  >
    <g>
      <text
        y={3.5}
      >
        Region G
      </text>
      <text
        dy={3.5}
        x={95}
      >
        43.8
      </text>
    </g>
    <path
      d="M10,0 h84"
      stroke="#f89764"
      strokeWidth={12}
    />
  </svg>
  <svg
    fill="#a3704d"
    y={48}
  >
    <g>
      <text
        y={3.5}
      >
        Region H
      </text>
      <text
        dy={3.5}
        x={42.45205479452055}
      >
        16.4
      </text>
    </g>
    <path
      d="M10,0 h31.45205479452055"
      stroke="#a3704d"
      strokeWidth={12}
    />
  </svg>
</svg>
`;

exports[`Storyshots 1 - Charts Column Chart 1`] = `
<svg
  height="100%"
  viewBox="0 0 128 140"
  width="100%"
>
  <g
    transform="translate(0)"
  >
    <g
      fill="#fa6479"
      fontSize={3}
    >
      <rect
        height={17.238521465274324}
        width={10}
        x={46}
        y={92.76147853472568}
      />
      <text
        textAnchor="middle"
        x={46}
        y={90.13647853472568}
      >
        <tspan
          dx={5}
        >
          13
        </tspan>
      </text>
    </g>
    <g
      fill="#cb91a0"
      fontSize={3}
    >
      <rect
        height={66.43460964694182}
        width={10}
        x={56}
        y={43.56539035305818}
      />
      <text
        textAnchor="middle"
        x={56}
        y={40.94039035305818}
      >
        <tspan
          dx={5}
        >
          50.1
        </tspan>
      </text>
    </g>
    <g
      fill="#a38ca4"
      fontSize={3}
    >
      <rect
        height={80}
        width={10}
        x={66}
        y={30}
      />
      <text
        textAnchor="middle"
        x={66}
        y={27.375}
      >
        <tspan
          dx={5}
        >
          60.33
        </tspan>
      </text>
    </g>
    <text
      fontSize={4.5}
      textAnchor="middle"
      x={61}
      y={117.875}
    />
  </g>
  <path
    d="m43 110h66"
    stroke="#000"
    strokeWidth={0.1}
  />
  <g
    fill="#000000"
    fontSize={3}
    textAnchor="middle"
  >
    <text
      x={24}
      y={110}
    >
      <tspan>
        0
      </tspan>
    </text>
    <text
      x={24}
      y={97.14285714285714}
    >
      <tspan>
        10
      </tspan>
    </text>
    <text
      x={24}
      y={84.28571428571428}
    >
      <tspan>
        20
      </tspan>
    </text>
    <text
      x={24}
      y={71.42857142857143}
    >
      <tspan>
        30
      </tspan>
    </text>
    <text
      x={24}
      y={58.57142857142857}
    >
      <tspan>
        40
      </tspan>
    </text>
    <text
      x={24}
      y={45.71428571428571}
    >
      <tspan>
        50
      </tspan>
    </text>
    <text
      x={24}
      y={32.85714285714286}
    >
      <tspan>
        60
      </tspan>
    </text>
    <text
      fontSize="2em"
      writingMode="vertical-lr"
      x={12.5}
      y={65}
    >
      
    </text>
  </g>
</svg>
`;

exports[`Storyshots 1 - Charts Editor Of Bar Chart 1`] = `
<div
  className="sc-VigVT pbRoL"
>
  <div
    className="sc-htpNat sc-bxivhb mui-panel ecWhHw"
    onClick={[Function]}
  >
    <div
      className="sc-ifAKCX dtaADw"
    >
      <button
        className="sc-bwzfXH mui-btn mui-btn--default mui-btn--medium uTxCW"
        onClick={[Function]}
        title="Add text block"
        type="button"
      >
        + text
      </button>
      <button
        className="sc-bwzfXH mui-btn mui-btn--default mui-btn--medium uTxCW"
        onClick={[Function]}
        title="Add sibling text block"
        type="button"
      >
        + 2 text columns
      </button>
      <button
        className="sc-bwzfXH mui-btn mui-btn--default mui-btn--medium uTxCW"
        onClick={[Function]}
        title="Add pie chart"
        type="button"
      >
        + pie chart
      </button>
      <button
        className="sc-bwzfXH mui-btn mui-btn--default mui-btn--medium uTxCW"
        onClick={[Function]}
        title="Add bar chart"
        type="button"
      >
        + bar chart
      </button>
      <button
        className="sc-bwzfXH mui-btn mui-btn--default mui-btn--medium uTxCW"
        onClick={[Function]}
        title="Add bar chart"
        type="button"
      >
        + column chart
      </button>
    </div>
  </div>
  <div
    className="sc-htpNat sc-jTzLTM mui-panel fmSAAF"
  >
    <div
      className="sc-bZQynM bpEAdn"
      onClick={[Function]}
    >
      <svg
        fontSize={2}
        fontWeight={500}
        preserveAspectRatio="xMidYMax meet"
        viewBox="0 0 100 54"
        width="100%"
      >
        <svg
          fill="#fa6479"
          y={0}
        >
          <g>
            <text
              y={3.5}
            >
              WFLA
            </text>
            <text
              dy={3.5}
              x={50.89041095890411}
            >
              20.8
            </text>
          </g>
          <path
            d="M10,0 h39.89041095890411"
            stroke="#fa6479"
            strokeWidth={12}
          />
        </svg>
        <svg
          fill="#cb91a0"
          y={6}
        >
          <g>
            <text
              y={3.5}
            >
              Region A
            </text>
            <text
              dy={3.5}
              x={79.46575342465755}
            >
              35.7
            </text>
          </g>
          <path
            d="M10,0 h68.46575342465755"
            stroke="#cb91a0"
            strokeWidth={12}
          />
        </svg>
        <svg
          fill="#a38ca4"
          y={12}
        >
          <g>
            <text
              y={3.5}
            >
              Region B
            </text>
            <text
              dy={3.5}
              x={41.301369863013704}
            >
              15.8
            </text>
          </g>
          <path
            d="M10,0 h30.3013698630137"
            stroke="#a38ca4"
            strokeWidth={12}
          />
        </svg>
        <svg
          fill="#7482aa"
          y={18}
        >
          <g>
            <text
              y={3.5}
            >
              Region C
            </text>
            <text
              dy={3.5}
              x={89.43835616438356}
            >
              40.9
            </text>
          </g>
          <path
            d="M10,0 h78.43835616438356"
            stroke="#7482aa"
            strokeWidth={12}
          />
        </svg>
        <svg
          fill="#35aeb7"
          y={24}
        >
          <g>
            <text
              y={3.5}
            >
              Region D
            </text>
            <text
              dy={3.5}
              x={56.26027397260275}
            >
              23.6
            </text>
          </g>
          <path
            d="M10,0 h45.26027397260275"
            stroke="#35aeb7"
            strokeWidth={12}
          />
        </svg>
        <svg
          fill="#01b25c"
          y={30}
        >
          <g>
            <text
              y={3.5}
            >
              Region E
            </text>
            <text
              dy={3.5}
              x={44.753424657534254}
            >
              17.6
            </text>
          </g>
          <path
            d="M10,0 h33.753424657534254"
            stroke="#01b25c"
            strokeWidth={12}
          />
        </svg>
        <svg
          fill="#e1c54e"
          y={36}
        >
          <g>
            <text
              y={3.5}
            >
              Region F
            </text>
            <text
              dy={3.5}
              x={84.06849315068494}
            >
              38.1
            </text>
          </g>
          <path
            d="M10,0 h73.06849315068494"
            stroke="#e1c54e"
            strokeWidth={12}
          />
        </svg>
        <svg
          fill="#f89764"
          y={42}
        >
          <g>
            <text
              y={3.5}
            >
              Region G
            </text>
            <text
              dy={3.5}
              x={95}
            >
              43.8
            </text>
          </g>
          <path
            d="M10,0 h84"
            stroke="#f89764"
            strokeWidth={12}
          />
        </svg>
        <svg
          fill="#a3704d"
          y={48}
        >
          <g>
            <text
              y={3.5}
            >
              Region H
            </text>
            <text
              dy={3.5}
              x={42.45205479452055}
            >
              16.4
            </text>
          </g>
          <path
            d="M10,0 h31.45205479452055"
            stroke="#a3704d"
            strokeWidth={12}
          />
        </svg>
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots 1 - Charts Editor Of Column Chart 1`] = `
<div
  className="sc-VigVT pbRoL"
>
  <div
    className="sc-htpNat sc-bxivhb mui-panel ecWhHw"
    onClick={[Function]}
  >
    <div
      className="sc-ifAKCX dtaADw"
    >
      <button
        className="sc-bwzfXH mui-btn mui-btn--default mui-btn--medium uTxCW"
        onClick={[Function]}
        title="Add text block"
        type="button"
      >
        + text
      </button>
      <button
        className="sc-bwzfXH mui-btn mui-btn--default mui-btn--medium uTxCW"
        onClick={[Function]}
        title="Add sibling text block"
        type="button"
      >
        + 2 text columns
      </button>
      <button
        className="sc-bwzfXH mui-btn mui-btn--default mui-btn--medium uTxCW"
        onClick={[Function]}
        title="Add pie chart"
        type="button"
      >
        + pie chart
      </button>
      <button
        className="sc-bwzfXH mui-btn mui-btn--default mui-btn--medium uTxCW"
        onClick={[Function]}
        title="Add bar chart"
        type="button"
      >
        + bar chart
      </button>
      <button
        className="sc-bwzfXH mui-btn mui-btn--default mui-btn--medium uTxCW"
        onClick={[Function]}
        title="Add bar chart"
        type="button"
      >
        + column chart
      </button>
    </div>
  </div>
  <div
    className="sc-htpNat sc-jTzLTM mui-panel fmSAAF"
  >
    <div
      className="sc-bZQynM bpEAdn"
      onClick={[Function]}
    >
      <svg
        height="100%"
        viewBox="0 0 128 140"
        width="100%"
      >
        <g
          transform="translate(0)"
        >
          <g
            fill="#fa6479"
            fontSize={3}
          >
            <rect
              height={17.238521465274324}
              width={10}
              x={46}
              y={92.76147853472568}
            />
            <text
              textAnchor="middle"
              x={46}
              y={90.13647853472568}
            >
              <tspan
                dx={5}
              >
                13
              </tspan>
            </text>
          </g>
          <g
            fill="#cb91a0"
            fontSize={3}
          >
            <rect
              height={66.43460964694182}
              width={10}
              x={56}
              y={43.56539035305818}
            />
            <text
              textAnchor="middle"
              x={56}
              y={40.94039035305818}
            >
              <tspan
                dx={5}
              >
                50.1
              </tspan>
            </text>
          </g>
          <g
            fill="#a38ca4"
            fontSize={3}
          >
            <rect
              height={80}
              width={10}
              x={66}
              y={30}
            />
            <text
              textAnchor="middle"
              x={66}
              y={27.375}
            >
              <tspan
                dx={5}
              >
                60.33
              </tspan>
            </text>
          </g>
          <text
            fontSize={4.5}
            textAnchor="middle"
            x={61}
            y={117.875}
          />
        </g>
        <path
          d="m43 110h66"
          stroke="#000"
          strokeWidth={0.1}
        />
        <g
          fill="#000000"
          fontSize={3}
          textAnchor="middle"
        >
          <text
            x={24}
            y={110}
          >
            <tspan>
              0
            </tspan>
          </text>
          <text
            x={24}
            y={97.14285714285714}
          >
            <tspan>
              10
            </tspan>
          </text>
          <text
            x={24}
            y={84.28571428571428}
          >
            <tspan>
              20
            </tspan>
          </text>
          <text
            x={24}
            y={71.42857142857143}
          >
            <tspan>
              30
            </tspan>
          </text>
          <text
            x={24}
            y={58.57142857142857}
          >
            <tspan>
              40
            </tspan>
          </text>
          <text
            x={24}
            y={45.71428571428571}
          >
            <tspan>
              50
            </tspan>
          </text>
          <text
            x={24}
            y={32.85714285714286}
          >
            <tspan>
              60
            </tspan>
          </text>
          <text
            fontSize="2em"
            writingMode="vertical-lr"
            x={12.5}
            y={65}
          >
            
          </text>
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots 1 - Charts Editor Of Pie Chart 1`] = `
<div
  className="sc-VigVT pbRoL"
>
  <div
    className="sc-htpNat sc-bxivhb mui-panel ecWhHw"
    onClick={[Function]}
  >
    <div
      className="sc-ifAKCX dtaADw"
    >
      <button
        className="sc-bwzfXH mui-btn mui-btn--default mui-btn--medium uTxCW"
        onClick={[Function]}
        title="Add text block"
        type="button"
      >
        + text
      </button>
      <button
        className="sc-bwzfXH mui-btn mui-btn--default mui-btn--medium uTxCW"
        onClick={[Function]}
        title="Add sibling text block"
        type="button"
      >
        + 2 text columns
      </button>
      <button
        className="sc-bwzfXH mui-btn mui-btn--default mui-btn--medium uTxCW"
        onClick={[Function]}
        title="Add pie chart"
        type="button"
      >
        + pie chart
      </button>
      <button
        className="sc-bwzfXH mui-btn mui-btn--default mui-btn--medium uTxCW"
        onClick={[Function]}
        title="Add bar chart"
        type="button"
      >
        + bar chart
      </button>
      <button
        className="sc-bwzfXH mui-btn mui-btn--default mui-btn--medium uTxCW"
        onClick={[Function]}
        title="Add bar chart"
        type="button"
      >
        + column chart
      </button>
    </div>
  </div>
  <div
    className="sc-htpNat sc-jTzLTM mui-panel fmSAAF"
  >
    <div
      className="sc-bZQynM bpEAdn"
      onClick={[Function]}
    >
      <svg
        viewBox="0 0 100 100"
      >
        <path
          d="M 16.683114654475617 51.047025302604276 A 33.33333333333333 33.33333333333333 0 0 0 26.429773960448422 73.57022603955159 L 50 50 L 16.683114654475617 51.047025302604276"
          fill="#fa6479"
        />
        <g>
          <text
            fill="black"
            fontSize={4}
            textAnchor="middle"
            x={9.210905525156399}
            y={67.6510173615458}
          >
            12
            %
          </text>
          <text
            dy={3.5}
            fill="black"
            fontSize={3}
            textAnchor="middle"
            x={9.210905525156399}
            y={67.6510173615458}
          >
            repairs
          </text>
        </g>
        <path
          d="M 22.430647524181275 31.263887404928983 A 33.33333333333333 33.33333333333333 0 0 0 16.683114654475617 51.047025302604276 L 50 50 L 22.430647524181275 31.263887404928983"
          fill="#cb91a0"
        />
        <g>
          <text
            fill="black"
            fontSize={4}
            textAnchor="middle"
            x={7.320280636580307}
            y={37.60039528714537}
          >
            10
            %
          </text>
          <text
            dy={3.5}
            fill="black"
            fontSize={3}
            textAnchor="middle"
            x={7.320280636580307}
            y={37.60039528714537}
          >
            consulting
          </text>
        </g>
        <path
          d="M 34.866983342015104 20.29978252705441 A 33.33333333333333 33.33333333333333 0 0 0 22.430647524181275 31.263887404928983 L 50 50 L 34.866983342015104 20.29978252705441"
          fill="#a38ca4"
        />
        <g>
          <text
            fill="black"
            fontSize={4}
            textAnchor="middle"
            x={20.608361541171025}
            y={16.66173023864625}
          >
            8
            %
          </text>
          <text
            dy={3.5}
            fill="black"
            fontSize={3}
            textAnchor="middle"
            x={20.608361541171025}
            y={16.66173023864625}
          >
            training
          </text>
        </g>
        <path
          d="M 36.76173697884062 80.59182085613268 A 33.33333333333333 33.33333333333333 0 1 0 34.866983342015104 20.29978252705441 L 50 50 L 36.76173697884062 80.59182085613268"
          fill="#7482aa"
        />
        <g>
          <text
            fill="white"
            fontSize={4}
            textAnchor="middle"
            x={66.65844267276219}
            y={49.47648734869786}
          >
            64
            %
          </text>
          <text
            dy={3.5}
            fill="white"
            fontSize={3}
            textAnchor="middle"
            x={66.65844267276219}
            y={49.47648734869786}
          >
            product sales
          </text>
        </g>
        <path
          d="M 26.429773960448408 73.57022603955157 A 33.33333333333333 33.33333333333333 0 0 0 36.76173697884062 80.59182085613268 L 50 50 L 26.429773960448408 73.57022603955157"
          fill="#35aeb7"
        />
        <g>
          <text
            fill="black"
            fontSize={4}
            textAnchor="middle"
            x={25.01851653990525}
            y={86.75913663442492}
          >
            6
            %
          </text>
          <text
            dy={3.5}
            fill="black"
            fontSize={3}
            textAnchor="middle"
            x={25.01851653990525}
            y={86.75913663442492}
          >
            others
          </text>
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots 1 - Charts Pie Chart 1`] = `
<svg
  viewBox="0 0 100 100"
>
  <path
    d="M 16.683114654475617 51.047025302604276 A 33.33333333333333 33.33333333333333 0 0 0 26.429773960448422 73.57022603955159 L 50 50 L 16.683114654475617 51.047025302604276"
    fill="#fa6479"
  />
  <g>
    <text
      fill="black"
      fontSize={4}
      textAnchor="middle"
      x={9.210905525156399}
      y={67.6510173615458}
    >
      12
      %
    </text>
    <text
      dy={3.5}
      fill="black"
      fontSize={3}
      textAnchor="middle"
      x={9.210905525156399}
      y={67.6510173615458}
    >
      repairs
    </text>
  </g>
  <path
    d="M 22.430647524181275 31.263887404928983 A 33.33333333333333 33.33333333333333 0 0 0 16.683114654475617 51.047025302604276 L 50 50 L 22.430647524181275 31.263887404928983"
    fill="#cb91a0"
  />
  <g>
    <text
      fill="black"
      fontSize={4}
      textAnchor="middle"
      x={7.320280636580307}
      y={37.60039528714537}
    >
      10
      %
    </text>
    <text
      dy={3.5}
      fill="black"
      fontSize={3}
      textAnchor="middle"
      x={7.320280636580307}
      y={37.60039528714537}
    >
      consulting
    </text>
  </g>
  <path
    d="M 34.866983342015104 20.29978252705441 A 33.33333333333333 33.33333333333333 0 0 0 22.430647524181275 31.263887404928983 L 50 50 L 34.866983342015104 20.29978252705441"
    fill="#a38ca4"
  />
  <g>
    <text
      fill="black"
      fontSize={4}
      textAnchor="middle"
      x={20.608361541171025}
      y={16.66173023864625}
    >
      8
      %
    </text>
    <text
      dy={3.5}
      fill="black"
      fontSize={3}
      textAnchor="middle"
      x={20.608361541171025}
      y={16.66173023864625}
    >
      training
    </text>
  </g>
  <path
    d="M 36.76173697884062 80.59182085613268 A 33.33333333333333 33.33333333333333 0 1 0 34.866983342015104 20.29978252705441 L 50 50 L 36.76173697884062 80.59182085613268"
    fill="#7482aa"
  />
  <g>
    <text
      fill="white"
      fontSize={4}
      textAnchor="middle"
      x={66.65844267276219}
      y={49.47648734869786}
    >
      64
      %
    </text>
    <text
      dy={3.5}
      fill="white"
      fontSize={3}
      textAnchor="middle"
      x={66.65844267276219}
      y={49.47648734869786}
    >
      product sales
    </text>
  </g>
  <path
    d="M 26.429773960448408 73.57022603955157 A 33.33333333333333 33.33333333333333 0 0 0 36.76173697884062 80.59182085613268 L 50 50 L 26.429773960448408 73.57022603955157"
    fill="#35aeb7"
  />
  <g>
    <text
      fill="black"
      fontSize={4}
      textAnchor="middle"
      x={25.01851653990525}
      y={86.75913663442492}
    >
      6
      %
    </text>
    <text
      dy={3.5}
      fill="black"
      fontSize={3}
      textAnchor="middle"
      x={25.01851653990525}
      y={86.75913663442492}
    >
      others
    </text>
  </g>
</svg>
`;

exports[`Storyshots 1 - Charts Six Groups Of Six Columns 1`] = `
<svg
  height="100%"
  viewBox="0 0 474 210"
  width="100%"
>
  <g
    transform="translate(0)"
  >
    <g
      fill="#fa6479"
      fontSize={3}
    >
      <rect
        height={10.37717022550389}
        width={10}
        x={46}
        y={99.62282977449611}
      />
      <text
        textAnchor="middle"
        x={46}
        y={96.99782977449611}
      >
        <tspan
          dx={5}
        >
          13
        </tspan>
      </text>
    </g>
    <g
      fill="#cb91a0"
      fontSize={3}
    >
      <rect
        height={18.359608860506885}
        width={10}
        x={56}
        y={91.64039113949312}
      />
      <text
        textAnchor="middle"
        x={56}
        y={89.01539113949312}
      >
        <tspan
          dx={5}
        >
          23
        </tspan>
      </text>
    </g>
    <g
      fill="#a38ca4"
      fontSize={3}
    >
      <rect
        height={26.342047495509878}
        width={10}
        x={66}
        y={83.65795250449013}
      />
      <text
        textAnchor="middle"
        x={66}
        y={81.03295250449013}
      >
        <tspan
          dx={5}
        >
          33
        </tspan>
      </text>
    </g>
    <g
      fill="#7482aa"
      fontSize={3}
    >
      <rect
        height={39.992017561364996}
        width={10}
        x={76}
        y={70.007982438635}
      />
      <text
        textAnchor="middle"
        x={76}
        y={67.382982438635}
      >
        <tspan
          dx={5}
        >
          50.1
        </tspan>
      </text>
    </g>
    <g
      fill="#35aeb7"
      fontSize={3}
    >
      <rect
        height={40.710437038515266}
        width={10}
        x={86}
        y={69.28956296148473}
      />
      <text
        textAnchor="middle"
        x={86}
        y={66.66456296148473}
      >
        <tspan
          dx={5}
        >
          51
        </tspan>
      </text>
    </g>
    <g
      fill="#01b25c"
      fontSize={3}
    >
      <rect
        height={48.15805228497305}
        width={10}
        x={96}
        y={61.84194771502695}
      />
      <text
        textAnchor="middle"
        x={96}
        y={59.21694771502695}
      >
        <tspan
          dx={5}
        >
          60.33
        </tspan>
      </text>
    </g>
    <text
      fontSize={4.5}
      textAnchor="middle"
      x={76}
      y={117.875}
    >
      Group 1
    </text>
  </g>
  <g
    transform="translate(66)"
  >
    <g
      fill="#fa6479"
      fontSize={3}
    >
      <rect
        height={8.15805228497306}
        width={10}
        x={46}
        y={101.84194771502695}
      />
      <text
        textAnchor="middle"
        x={46}
        y={99.21694771502695}
      >
        <tspan
          dx={5}
        >
          10.22
        </tspan>
      </text>
    </g>
    <g
      fill="#cb91a0"
      fontSize={3}
    >
      <rect
        height={11.17541408900419}
        width={10}
        x={56}
        y={98.82458591099581}
      />
      <text
        textAnchor="middle"
        x={56}
        y={96.19958591099581}
      >
        <tspan
          dx={5}
        >
          14
        </tspan>
      </text>
    </g>
    <g
      fill="#a38ca4"
      fontSize={3}
    >
      <rect
        height={11.17541408900419}
        width={10}
        x={66}
        y={98.82458591099581}
      />
      <text
        textAnchor="middle"
        x={66}
        y={96.19958591099581}
      >
        <tspan
          dx={5}
        >
          14
        </tspan>
      </text>
    </g>
    <g
      fill="#7482aa"
      fontSize={3}
    >
      <rect
        height={21.55258431450808}
        width={10}
        x={76}
        y={88.44741568549192}
      />
      <text
        textAnchor="middle"
        x={76}
        y={85.82241568549192}
      >
        <tspan
          dx={5}
        >
          27
        </tspan>
      </text>
    </g>
    <g
      fill="#35aeb7"
      fontSize={3}
    >
      <rect
        height={71.84194771502695}
        width={10}
        x={86}
        y={38.15805228497305}
      />
      <text
        textAnchor="middle"
        x={86}
        y={35.53305228497305}
      >
        <tspan
          dx={5}
        >
          90
        </tspan>
      </text>
    </g>
    <g
      fill="#01b25c"
      fontSize={3}
    >
      <rect
        height={80}
        width={10}
        x={96}
        y={30}
      />
      <text
        textAnchor="middle"
        x={96}
        y={27.375}
      >
        <tspan
          dx={5}
        >
          100.22
        </tspan>
      </text>
    </g>
    <text
      fontSize={4.5}
      textAnchor="middle"
      x={76}
      y={117.875}
    >
      Group 2
    </text>
  </g>
  <g
    transform="translate(132)"
  >
    <g
      fill="#fa6479"
      fontSize={3}
    >
      <rect
        height={15.166633406505687}
        width={10}
        x={46}
        y={94.83336659349432}
      />
      <text
        textAnchor="middle"
        x={46}
        y={92.20836659349432}
      >
        <tspan
          dx={5}
        >
          19
        </tspan>
      </text>
    </g>
    <g
      fill="#cb91a0"
      fontSize={3}
    >
      <rect
        height={23.14907204150868}
        width={10}
        x={56}
        y={86.85092795849133}
      />
      <text
        textAnchor="middle"
        x={56}
        y={84.22592795849133}
      >
        <tspan
          dx={5}
        >
          29
        </tspan>
      </text>
    </g>
    <g
      fill="#a38ca4"
      fontSize={3}
    >
      <rect
        height={39.91219317501497}
        width={10}
        x={66}
        y={70.08780682498502}
      />
      <text
        textAnchor="middle"
        x={66}
        y={67.46280682498502}
      >
        <tspan
          dx={5}
        >
          50
        </tspan>
      </text>
    </g>
    <g
      fill="#7482aa"
      fontSize={3}
    >
      <rect
        height={52.684094991019755}
        width={10}
        x={76}
        y={57.315905008980245}
      />
      <text
        textAnchor="middle"
        x={76}
        y={54.690905008980245}
      >
        <tspan
          dx={5}
        >
          66
        </tspan>
      </text>
    </g>
    <g
      fill="#35aeb7"
      fontSize={3}
    >
      <rect
        height={76.19237677110357}
        width={10}
        x={86}
        y={33.80762322889643}
      />
      <text
        textAnchor="middle"
        x={86}
        y={31.182623228896432}
      >
        <tspan
          dx={5}
        >
          95.45
        </tspan>
      </text>
    </g>
    <g
      fill="#01b25c"
      fontSize={3}
    >
      <rect
        height={79.82438635002994}
        width={10}
        x={96}
        y={30.17561364997006}
      />
      <text
        textAnchor="middle"
        x={96}
        y={27.55061364997006}
      >
        <tspan
          dx={5}
        >
          100
        </tspan>
      </text>
    </g>
    <text
      fontSize={4.5}
      textAnchor="middle"
      x={76}
      y={117.875}
    >
      Group 3
    </text>
  </g>
  <g
    transform="translate(198)"
  >
    <g
      fill="#fa6479"
      fontSize={3}
    >
      <rect
        height={10.37717022550389}
        width={10}
        x={46}
        y={99.62282977449611}
      />
      <text
        textAnchor="middle"
        x={46}
        y={96.99782977449611}
      >
        <tspan
          dx={5}
        >
          13
        </tspan>
      </text>
    </g>
    <g
      fill="#cb91a0"
      fontSize={3}
    >
      <rect
        height={18.359608860506885}
        width={10}
        x={56}
        y={91.64039113949312}
      />
      <text
        textAnchor="middle"
        x={56}
        y={89.01539113949312}
      >
        <tspan
          dx={5}
        >
          23
        </tspan>
      </text>
    </g>
    <g
      fill="#a38ca4"
      fontSize={3}
    >
      <rect
        height={26.342047495509878}
        width={10}
        x={66}
        y={83.65795250449013}
      />
      <text
        textAnchor="middle"
        x={66}
        y={81.03295250449013}
      >
        <tspan
          dx={5}
        >
          33
        </tspan>
      </text>
    </g>
    <g
      fill="#7482aa"
      fontSize={3}
    >
      <rect
        height={39.992017561364996}
        width={10}
        x={76}
        y={70.007982438635}
      />
      <text
        textAnchor="middle"
        x={76}
        y={67.382982438635}
      >
        <tspan
          dx={5}
        >
          50.1
        </tspan>
      </text>
    </g>
    <g
      fill="#35aeb7"
      fontSize={3}
    >
      <rect
        height={48.15805228497305}
        width={10}
        x={86}
        y={61.84194771502695}
      />
      <text
        textAnchor="middle"
        x={86}
        y={59.21694771502695}
      >
        <tspan
          dx={5}
        >
          60.33
        </tspan>
      </text>
    </g>
    <g
      fill="#01b25c"
      fontSize={3}
    >
      <rect
        height={57.8726801037717}
        width={10}
        x={96}
        y={52.1273198962283}
      />
      <text
        textAnchor="middle"
        x={96}
        y={49.5023198962283}
      >
        <tspan
          dx={5}
        >
          72.5
        </tspan>
      </text>
    </g>
    <text
      fontSize={4.5}
      textAnchor="middle"
      x={76}
      y={117.875}
    >
      Group 4
    </text>
  </g>
  <g
    transform="translate(264)"
  >
    <g
      fill="#fa6479"
      fontSize={3}
    >
      <rect
        height={8.15805228497306}
        width={10}
        x={46}
        y={101.84194771502695}
      />
      <text
        textAnchor="middle"
        x={46}
        y={99.21694771502695}
      >
        <tspan
          dx={5}
        >
          10.22
        </tspan>
      </text>
    </g>
    <g
      fill="#cb91a0"
      fontSize={3}
    >
      <rect
        height={11.17541408900419}
        width={10}
        x={56}
        y={98.82458591099581}
      />
      <text
        textAnchor="middle"
        x={56}
        y={96.19958591099581}
      >
        <tspan
          dx={5}
        >
          14
        </tspan>
      </text>
    </g>
    <g
      fill="#a38ca4"
      fontSize={3}
    >
      <rect
        height={11.17541408900419}
        width={10}
        x={66}
        y={98.82458591099581}
      />
      <text
        textAnchor="middle"
        x={66}
        y={96.19958591099581}
      >
        <tspan
          dx={5}
        >
          14
        </tspan>
      </text>
    </g>
    <g
      fill="#7482aa"
      fontSize={3}
    >
      <rect
        height={24.945120734384354}
        width={10}
        x={76}
        y={85.05487926561565}
      />
      <text
        textAnchor="middle"
        x={76}
        y={82.42987926561565}
      >
        <tspan
          dx={5}
        >
          31.25
        </tspan>
      </text>
    </g>
    <g
      fill="#35aeb7"
      fontSize={3}
    >
      <rect
        height={71.84194771502695}
        width={10}
        x={86}
        y={38.15805228497305}
      />
      <text
        textAnchor="middle"
        x={86}
        y={35.53305228497305}
      >
        <tspan
          dx={5}
        >
          90
        </tspan>
      </text>
    </g>
    <g
      fill="#01b25c"
      fontSize={3}
    >
      <rect
        height={80}
        width={10}
        x={96}
        y={30}
      />
      <text
        textAnchor="middle"
        x={96}
        y={27.375}
      >
        <tspan
          dx={5}
        >
          100.22
        </tspan>
      </text>
    </g>
    <text
      fontSize={4.5}
      textAnchor="middle"
      x={76}
      y={117.875}
    >
      Group 5
    </text>
  </g>
  <g
    transform="translate(330)"
  >
    <g
      fill="#fa6479"
      fontSize={3}
    >
      <rect
        height={3.9912193175014967}
        width={10}
        x={46}
        y={106.0087806824985}
      />
      <text
        textAnchor="middle"
        x={46}
        y={103.3837806824985}
      >
        <tspan
          dx={5}
        >
          5
        </tspan>
      </text>
    </g>
    <g
      fill="#cb91a0"
      fontSize={3}
    >
      <rect
        height={15.166633406505687}
        width={10}
        x={56}
        y={94.83336659349432}
      />
      <text
        textAnchor="middle"
        x={56}
        y={92.20836659349432}
      >
        <tspan
          dx={5}
        >
          19
        </tspan>
      </text>
    </g>
    <g
      fill="#a38ca4"
      fontSize={3}
    >
      <rect
        height={23.14907204150868}
        width={10}
        x={66}
        y={86.85092795849133}
      />
      <text
        textAnchor="middle"
        x={66}
        y={84.22592795849133}
      >
        <tspan
          dx={5}
        >
          29
        </tspan>
      </text>
    </g>
    <g
      fill="#7482aa"
      fontSize={3}
    >
      <rect
        height={39.91219317501497}
        width={10}
        x={76}
        y={70.08780682498502}
      />
      <text
        textAnchor="middle"
        x={76}
        y={67.46280682498502}
      >
        <tspan
          dx={5}
        >
          50
        </tspan>
      </text>
    </g>
    <g
      fill="#35aeb7"
      fontSize={3}
    >
      <rect
        height={52.684094991019755}
        width={10}
        x={86}
        y={57.315905008980245}
      />
      <text
        textAnchor="middle"
        x={86}
        y={54.690905008980245}
      >
        <tspan
          dx={5}
        >
          66
        </tspan>
      </text>
    </g>
    <g
      fill="#01b25c"
      fontSize={3}
    >
      <rect
        height={76.19237677110357}
        width={10}
        x={96}
        y={33.80762322889643}
      />
      <text
        textAnchor="middle"
        x={96}
        y={31.182623228896432}
      >
        <tspan
          dx={5}
        >
          95.45
        </tspan>
      </text>
    </g>
    <text
      fontSize={4.5}
      textAnchor="middle"
      x={76}
      y={117.875}
    >
      Group 6
    </text>
  </g>
  <path
    d="m43 110h396"
    stroke="#000"
    strokeWidth={0.1}
  />
  <g
    fill="#000000"
    fontSize={3}
    textAnchor="middle"
  >
    <text
      x={24}
      y={110}
    >
      <tspan>
        0
      </tspan>
    </text>
    <text
      x={24}
      y={101.81818181818181}
    >
      <tspan>
        10
      </tspan>
    </text>
    <text
      x={24}
      y={93.63636363636364}
    >
      <tspan>
        20
      </tspan>
    </text>
    <text
      x={24}
      y={85.45454545454545}
    >
      <tspan>
        30
      </tspan>
    </text>
    <text
      x={24}
      y={77.27272727272728}
    >
      <tspan>
        40
      </tspan>
    </text>
    <text
      x={24}
      y={69.0909090909091}
    >
      <tspan>
        50
      </tspan>
    </text>
    <text
      x={24}
      y={60.90909090909091}
    >
      <tspan>
        60
      </tspan>
    </text>
    <text
      x={24}
      y={52.72727272727273}
    >
      <tspan>
        70
      </tspan>
    </text>
    <text
      x={24}
      y={44.54545454545455}
    >
      <tspan>
        80
      </tspan>
    </text>
    <text
      x={24}
      y={36.36363636363636}
    >
      <tspan>
        90
      </tspan>
    </text>
    <text
      x={24}
      y={28.181818181818187}
    >
      <tspan>
        100
      </tspan>
    </text>
    <text
      fontSize="2em"
      writingMode="vertical-lr"
      x={12.5}
      y={65}
    >
      Column chart: 3 groups of 5 elements
    </text>
  </g>
  <g
    fontSize={3}
    width={80}
  >
    <rect
      fill="#fa6479"
      height={10}
      width={10}
      x={46}
      y={141}
    />
    <text
      x={61.25}
      y={146.25}
    >
      Maelstorm
    </text>
  </g>
  <g
    fontSize={3}
    width={80}
  >
    <rect
      fill="#cb91a0"
      height={10}
      width={10}
      x={112}
      y={141}
    />
    <text
      x={127.25}
      y={146.25}
    >
      Spring
    </text>
  </g>
  <g
    fontSize={3}
    width={80}
  >
    <rect
      fill="#a38ca4"
      height={10}
      width={10}
      x={178}
      y={141}
    />
    <text
      x={193.25}
      y={146.25}
    >
      Electro
    </text>
  </g>
  <g
    fontSize={3}
    width={80}
  >
    <rect
      fill="#7482aa"
      height={10}
      width={10}
      x={244}
      y={141}
    />
    <text
      x={259.25}
      y={146.25}
    >
      HBO
    </text>
  </g>
  <g
    fontSize={3}
    width={80}
  >
    <rect
      fill="#35aeb7"
      height={10}
      width={10}
      x={310}
      y={141}
    />
    <text
      x={325.25}
      y={146.25}
    >
      Netflix
    </text>
  </g>
  <g
    fontSize={3}
    width={80}
  >
    <rect
      fill="#01b25c"
      height={10}
      width={10}
      x={376}
      y={141}
    />
    <text
      x={391.25}
      y={146.25}
    >
      Amazon
    </text>
  </g>
</svg>
`;

exports[`Storyshots 1 - Charts Six Groups Of Two Columns 1`] = `
<svg
  height="100%"
  viewBox="0 0 474 210"
  width="100%"
>
  <g
    transform="translate(0)"
  >
    <g
      fill="#fa6479"
      fontSize={3}
    >
      <rect
        height={10.37717022550389}
        width={10}
        x={46}
        y={99.62282977449611}
      />
      <text
        textAnchor="middle"
        x={46}
        y={96.99782977449611}
      >
        <tspan
          dx={5}
        >
          13
        </tspan>
      </text>
    </g>
    <g
      fill="#cb91a0"
      fontSize={3}
    >
      <rect
        height={39.992017561364996}
        width={10}
        x={56}
        y={70.007982438635}
      />
      <text
        textAnchor="middle"
        x={56}
        y={67.382982438635}
      >
        <tspan
          dx={5}
        >
          50.1
        </tspan>
      </text>
    </g>
    <g
      fill="#a38ca4"
      fontSize={3}
    >
      <rect
        height={48.15805228497305}
        width={10}
        x={66}
        y={61.84194771502695}
      />
      <text
        textAnchor="middle"
        x={66}
        y={59.21694771502695}
      >
        <tspan
          dx={5}
        >
          60.33
        </tspan>
      </text>
    </g>
    <text
      fontSize={4.5}
      textAnchor="middle"
      x={61}
      y={117.875}
    >
      Group 1
    </text>
  </g>
  <g
    transform="translate(66)"
  >
    <g
      fill="#fa6479"
      fontSize={3}
    >
      <rect
        height={11.17541408900419}
        width={10}
        x={46}
        y={98.82458591099581}
      />
      <text
        textAnchor="middle"
        x={46}
        y={96.19958591099581}
      >
        <tspan
          dx={5}
        >
          14
        </tspan>
      </text>
    </g>
    <g
      fill="#cb91a0"
      fontSize={3}
    >
      <rect
        height={71.84194771502695}
        width={10}
        x={56}
        y={38.15805228497305}
      />
      <text
        textAnchor="middle"
        x={56}
        y={35.53305228497305}
      >
        <tspan
          dx={5}
        >
          90
        </tspan>
      </text>
    </g>
    <g
      fill="#a38ca4"
      fontSize={3}
    >
      <rect
        height={80}
        width={10}
        x={66}
        y={30}
      />
      <text
        textAnchor="middle"
        x={66}
        y={27.375}
      >
        <tspan
          dx={5}
        >
          100.22
        </tspan>
      </text>
    </g>
    <text
      fontSize={4.5}
      textAnchor="middle"
      x={61}
      y={117.875}
    >
      Group 2
    </text>
  </g>
  <g
    transform="translate(132)"
  >
    <g
      fill="#fa6479"
      fontSize={3}
    >
      <rect
        height={15.166633406505687}
        width={10}
        x={46}
        y={94.83336659349432}
      />
      <text
        textAnchor="middle"
        x={46}
        y={92.20836659349432}
      >
        <tspan
          dx={5}
        >
          19
        </tspan>
      </text>
    </g>
    <g
      fill="#cb91a0"
      fontSize={3}
    >
      <rect
        height={23.14907204150868}
        width={10}
        x={56}
        y={86.85092795849133}
      />
      <text
        textAnchor="middle"
        x={56}
        y={84.22592795849133}
      >
        <tspan
          dx={5}
        >
          29
        </tspan>
      </text>
    </g>
    <g
      fill="#a38ca4"
      fontSize={3}
    >
      <rect
        height={52.684094991019755}
        width={10}
        x={66}
        y={57.315905008980245}
      />
      <text
        textAnchor="middle"
        x={66}
        y={54.690905008980245}
      >
        <tspan
          dx={5}
        >
          66
        </tspan>
      </text>
    </g>
    <text
      fontSize={4.5}
      textAnchor="middle"
      x={61}
      y={117.875}
    >
      Group 3
    </text>
  </g>
  <g
    transform="translate(198)"
  >
    <g
      fill="#fa6479"
      fontSize={3}
    >
      <rect
        height={6.649371382957494}
        width={10}
        x={46}
        y={103.3506286170425}
      />
      <text
        textAnchor="middle"
        x={46}
        y={100.7256286170425}
      >
        <tspan
          dx={5}
        >
          8.33
        </tspan>
      </text>
    </g>
    <g
      fill="#cb91a0"
      fontSize={3}
    >
      <rect
        height={24.02714029135901}
        width={10}
        x={56}
        y={85.97285970864098}
      />
      <text
        textAnchor="middle"
        x={56}
        y={83.34785970864098}
      >
        <tspan
          dx={5}
        >
          30.1
        </tspan>
      </text>
    </g>
    <g
      fill="#a38ca4"
      fontSize={3}
    >
      <rect
        height={79.82438635002994}
        width={10}
        x={66}
        y={30.17561364997006}
      />
      <text
        textAnchor="middle"
        x={66}
        y={27.55061364997006}
      >
        <tspan
          dx={5}
        >
          100
        </tspan>
      </text>
    </g>
    <text
      fontSize={4.5}
      textAnchor="middle"
      x={61}
      y={117.875}
    >
      Group 4
    </text>
  </g>
  <g
    transform="translate(264)"
  >
    <g
      fill="#fa6479"
      fontSize={3}
    >
      <rect
        height={31.929754540011974}
        width={10}
        x={46}
        y={78.07024545998803}
      />
      <text
        textAnchor="middle"
        x={46}
        y={75.44524545998803}
      >
        <tspan
          dx={5}
        >
          40
        </tspan>
      </text>
    </g>
    <g
      fill="#cb91a0"
      fontSize={3}
    >
      <rect
        height={64.65775294352424}
        width={10}
        x={56}
        y={45.342247056475756}
      />
      <text
        textAnchor="middle"
        x={56}
        y={42.717247056475756}
      >
        <tspan
          dx={5}
        >
          81
        </tspan>
      </text>
    </g>
    <g
      fill="#a38ca4"
      fontSize={3}
    >
      <rect
        height={72.01756136499701}
        width={10}
        x={66}
        y={37.98243863500299}
      />
      <text
        textAnchor="middle"
        x={66}
        y={35.35743863500299}
      >
        <tspan
          dx={5}
        >
          90.22
        </tspan>
      </text>
    </g>
    <text
      fontSize={4.5}
      textAnchor="middle"
      x={61}
      y={117.875}
    >
      Group 5
    </text>
  </g>
  <g
    transform="translate(330)"
  >
    <g
      fill="#fa6479"
      fontSize={3}
    >
      <rect
        height={27.140291359010178}
        width={10}
        x={46}
        y={82.85970864098982}
      />
      <text
        textAnchor="middle"
        x={46}
        y={80.23470864098982}
      >
        <tspan
          dx={5}
        >
          34
        </tspan>
      </text>
    </g>
    <g
      fill="#cb91a0"
      fontSize={3}
    >
      <rect
        height={58.27180203552185}
        width={10}
        x={56}
        y={51.72819796447815}
      />
      <text
        textAnchor="middle"
        x={56}
        y={49.10319796447815}
      >
        <tspan
          dx={5}
        >
          73
        </tspan>
      </text>
    </g>
    <g
      fill="#a38ca4"
      fontSize={3}
    >
      <rect
        height={79.92815805228497}
        width={10}
        x={66}
        y={30.07184194771503}
      />
      <text
        textAnchor="middle"
        x={66}
        y={27.44684194771503}
      >
        <tspan
          dx={5}
        >
          100.13
        </tspan>
      </text>
    </g>
    <text
      fontSize={4.5}
      textAnchor="middle"
      x={61}
      y={117.875}
    >
      Group 6
    </text>
  </g>
  <path
    d="m43 110h366"
    stroke="#000"
    strokeWidth={0.1}
  />
  <g
    fill="#000000"
    fontSize={3}
    textAnchor="middle"
  >
    <text
      x={24}
      y={110}
    >
      <tspan>
        0
      </tspan>
    </text>
    <text
      x={24}
      y={101.81818181818181}
    >
      <tspan>
        10
      </tspan>
    </text>
    <text
      x={24}
      y={93.63636363636364}
    >
      <tspan>
        20
      </tspan>
    </text>
    <text
      x={24}
      y={85.45454545454545}
    >
      <tspan>
        30
      </tspan>
    </text>
    <text
      x={24}
      y={77.27272727272728}
    >
      <tspan>
        40
      </tspan>
    </text>
    <text
      x={24}
      y={69.0909090909091}
    >
      <tspan>
        50
      </tspan>
    </text>
    <text
      x={24}
      y={60.90909090909091}
    >
      <tspan>
        60
      </tspan>
    </text>
    <text
      x={24}
      y={52.72727272727273}
    >
      <tspan>
        70
      </tspan>
    </text>
    <text
      x={24}
      y={44.54545454545455}
    >
      <tspan>
        80
      </tspan>
    </text>
    <text
      x={24}
      y={36.36363636363636}
    >
      <tspan>
        90
      </tspan>
    </text>
    <text
      x={24}
      y={28.181818181818187}
    >
      <tspan>
        100
      </tspan>
    </text>
    <text
      fontSize="2em"
      writingMode="vertical-lr"
      x={12.5}
      y={65}
    >
      Column chart: 4 groups of 3 elements
    </text>
  </g>
  <g
    fontSize={3}
    width={80}
  >
    <rect
      fill="#fa6479"
      height={10}
      width={10}
      x={46}
      y={141}
    />
    <text
      x={61.25}
      y={146.25}
    >
      Maelstorm
    </text>
  </g>
  <g
    fontSize={3}
    width={80}
  >
    <rect
      fill="#cb91a0"
      height={10}
      width={10}
      x={112}
      y={141}
    />
    <text
      x={127.25}
      y={146.25}
    >
      Spring
    </text>
  </g>
  <g
    fontSize={3}
    width={80}
  >
    <rect
      fill="#a38ca4"
      height={10}
      width={10}
      x={178}
      y={141}
    />
    <text
      x={193.25}
      y={146.25}
    >
      Electro
    </text>
  </g>
</svg>
`;

exports[`Storyshots 1 - Charts Two Groups Of Six Columns 1`] = `
<svg
  height="100%"
  viewBox="0 0 198 210"
  width="100%"
>
  <g
    transform="translate(0)"
  >
    <g
      fill="#fa6479"
      fontSize={3}
    >
      <rect
        height={10.37717022550389}
        width={10}
        x={46}
        y={99.62282977449611}
      />
      <text
        textAnchor="middle"
        x={46}
        y={96.99782977449611}
      >
        <tspan
          dx={5}
        >
          13
        </tspan>
      </text>
    </g>
    <g
      fill="#cb91a0"
      fontSize={3}
    >
      <rect
        height={18.359608860506885}
        width={10}
        x={56}
        y={91.64039113949312}
      />
      <text
        textAnchor="middle"
        x={56}
        y={89.01539113949312}
      >
        <tspan
          dx={5}
        >
          23
        </tspan>
      </text>
    </g>
    <g
      fill="#a38ca4"
      fontSize={3}
    >
      <rect
        height={26.342047495509878}
        width={10}
        x={66}
        y={83.65795250449013}
      />
      <text
        textAnchor="middle"
        x={66}
        y={81.03295250449013}
      >
        <tspan
          dx={5}
        >
          33
        </tspan>
      </text>
    </g>
    <g
      fill="#7482aa"
      fontSize={3}
    >
      <rect
        height={39.992017561364996}
        width={10}
        x={76}
        y={70.007982438635}
      />
      <text
        textAnchor="middle"
        x={76}
        y={67.382982438635}
      >
        <tspan
          dx={5}
        >
          50.1
        </tspan>
      </text>
    </g>
    <g
      fill="#35aeb7"
      fontSize={3}
    >
      <rect
        height={40.710437038515266}
        width={10}
        x={86}
        y={69.28956296148473}
      />
      <text
        textAnchor="middle"
        x={86}
        y={66.66456296148473}
      >
        <tspan
          dx={5}
        >
          51
        </tspan>
      </text>
    </g>
    <g
      fill="#01b25c"
      fontSize={3}
    >
      <rect
        height={48.15805228497305}
        width={10}
        x={96}
        y={61.84194771502695}
      />
      <text
        textAnchor="middle"
        x={96}
        y={59.21694771502695}
      >
        <tspan
          dx={5}
        >
          60.33
        </tspan>
      </text>
    </g>
    <text
      fontSize={4.5}
      textAnchor="middle"
      x={76}
      y={117.875}
    >
      Group 1
    </text>
  </g>
  <g
    transform="translate(66)"
  >
    <g
      fill="#fa6479"
      fontSize={3}
    >
      <rect
        height={8.15805228497306}
        width={10}
        x={46}
        y={101.84194771502695}
      />
      <text
        textAnchor="middle"
        x={46}
        y={99.21694771502695}
      >
        <tspan
          dx={5}
        >
          10.22
        </tspan>
      </text>
    </g>
    <g
      fill="#cb91a0"
      fontSize={3}
    >
      <rect
        height={11.17541408900419}
        width={10}
        x={56}
        y={98.82458591099581}
      />
      <text
        textAnchor="middle"
        x={56}
        y={96.19958591099581}
      >
        <tspan
          dx={5}
        >
          14
        </tspan>
      </text>
    </g>
    <g
      fill="#a38ca4"
      fontSize={3}
    >
      <rect
        height={11.17541408900419}
        width={10}
        x={66}
        y={98.82458591099581}
      />
      <text
        textAnchor="middle"
        x={66}
        y={96.19958591099581}
      >
        <tspan
          dx={5}
        >
          14
        </tspan>
      </text>
    </g>
    <g
      fill="#7482aa"
      fontSize={3}
    >
      <rect
        height={24.945120734384354}
        width={10}
        x={76}
        y={85.05487926561565}
      />
      <text
        textAnchor="middle"
        x={76}
        y={82.42987926561565}
      >
        <tspan
          dx={5}
        >
          31.25
        </tspan>
      </text>
    </g>
    <g
      fill="#35aeb7"
      fontSize={3}
    >
      <rect
        height={71.84194771502695}
        width={10}
        x={86}
        y={38.15805228497305}
      />
      <text
        textAnchor="middle"
        x={86}
        y={35.53305228497305}
      >
        <tspan
          dx={5}
        >
          90
        </tspan>
      </text>
    </g>
    <g
      fill="#01b25c"
      fontSize={3}
    >
      <rect
        height={80}
        width={10}
        x={96}
        y={30}
      />
      <text
        textAnchor="middle"
        x={96}
        y={27.375}
      >
        <tspan
          dx={5}
        >
          100.22
        </tspan>
      </text>
    </g>
    <text
      fontSize={4.5}
      textAnchor="middle"
      x={76}
      y={117.875}
    >
      Group 5
    </text>
  </g>
  <path
    d="m43 110h132"
    stroke="#000"
    strokeWidth={0.1}
  />
  <g
    fill="#000000"
    fontSize={3}
    textAnchor="middle"
  >
    <text
      x={24}
      y={110}
    >
      <tspan>
        0
      </tspan>
    </text>
    <text
      x={24}
      y={101.81818181818181}
    >
      <tspan>
        10
      </tspan>
    </text>
    <text
      x={24}
      y={93.63636363636364}
    >
      <tspan>
        20
      </tspan>
    </text>
    <text
      x={24}
      y={85.45454545454545}
    >
      <tspan>
        30
      </tspan>
    </text>
    <text
      x={24}
      y={77.27272727272728}
    >
      <tspan>
        40
      </tspan>
    </text>
    <text
      x={24}
      y={69.0909090909091}
    >
      <tspan>
        50
      </tspan>
    </text>
    <text
      x={24}
      y={60.90909090909091}
    >
      <tspan>
        60
      </tspan>
    </text>
    <text
      x={24}
      y={52.72727272727273}
    >
      <tspan>
        70
      </tspan>
    </text>
    <text
      x={24}
      y={44.54545454545455}
    >
      <tspan>
        80
      </tspan>
    </text>
    <text
      x={24}
      y={36.36363636363636}
    >
      <tspan>
        90
      </tspan>
    </text>
    <text
      x={24}
      y={28.181818181818187}
    >
      <tspan>
        100
      </tspan>
    </text>
    <text
      fontSize="2em"
      writingMode="vertical-lr"
      x={12.5}
      y={65}
    >
      Column chart: 3 groups of 5 elements
    </text>
  </g>
  <g
    fontSize={3}
    width={80}
  >
    <rect
      fill="#fa6479"
      height={10}
      width={10}
      x={46}
      y={141}
    />
    <text
      x={61.25}
      y={146.25}
    >
      Maelstorm
    </text>
  </g>
  <g
    fontSize={3}
    width={80}
  >
    <rect
      fill="#cb91a0"
      height={10}
      width={10}
      x={112}
      y={141}
    />
    <text
      x={127.25}
      y={146.25}
    >
      Spring
    </text>
  </g>
  <g
    fontSize={3}
    width={80}
  >
    <rect
      fill="#a38ca4"
      height={10}
      width={10}
      x={46}
      y={154.5}
    />
    <text
      x={61.25}
      y={159.75}
    >
      Electro
    </text>
  </g>
  <g
    fontSize={3}
    width={80}
  >
    <rect
      fill="#7482aa"
      height={10}
      width={10}
      x={112}
      y={154.5}
    />
    <text
      x={127.25}
      y={159.75}
    >
      HBO
    </text>
  </g>
  <g
    fontSize={3}
    width={80}
  >
    <rect
      fill="#35aeb7"
      height={10}
      width={10}
      x={46}
      y={168}
    />
    <text
      x={61.25}
      y={173.25}
    >
      Netflix
    </text>
  </g>
  <g
    fontSize={3}
    width={80}
  >
    <rect
      fill="#01b25c"
      height={10}
      width={10}
      x={112}
      y={168}
    />
    <text
      x={127.25}
      y={173.25}
    >
      Amazon
    </text>
  </g>
</svg>
`;

exports[`Storyshots 1 - Charts Two Groups Of Six Columns Min Value 20 Max Value 100 And Dy 5 1`] = `
<svg
  height="100%"
  viewBox="0 0 198 210"
  width="100%"
>
  <g
    transform="translate(0)"
  >
    <g
      fill="#fa6479"
      fontSize={3}
    >
      <rect
        height={-7}
        width={10}
        x={46}
        y={117}
      />
      <text
        textAnchor="middle"
        x={46}
        y={107.375}
      >
        <tspan
          dx={5}
        >
          &lt; 20
        </tspan>
      </text>
    </g>
    <g
      fill="#cb91a0"
      fontSize={3}
    >
      <rect
        height={3}
        width={10}
        x={56}
        y={107}
      />
      <text
        textAnchor="middle"
        x={56}
        y={104.375}
      >
        <tspan
          dx={5}
        >
          23
        </tspan>
      </text>
    </g>
    <g
      fill="#a38ca4"
      fontSize={3}
    >
      <rect
        height={13}
        width={10}
        x={66}
        y={97}
      />
      <text
        textAnchor="middle"
        x={66}
        y={94.375}
      >
        <tspan
          dx={5}
        >
          33
        </tspan>
      </text>
    </g>
    <g
      fill="#7482aa"
      fontSize={3}
    >
      <rect
        height={30.1}
        width={10}
        x={76}
        y={79.9}
      />
      <text
        textAnchor="middle"
        x={76}
        y={77.275}
      >
        <tspan
          dx={5}
        >
          50.1
        </tspan>
      </text>
    </g>
    <g
      fill="#35aeb7"
      fontSize={3}
    >
      <rect
        height={31}
        width={10}
        x={86}
        y={79}
      />
      <text
        textAnchor="middle"
        x={86}
        y={76.375}
      >
        <tspan
          dx={5}
        >
          51
        </tspan>
      </text>
    </g>
    <g
      fill="#01b25c"
      fontSize={3}
    >
      <rect
        height={40.33}
        width={10}
        x={96}
        y={69.67}
      />
      <text
        textAnchor="middle"
        x={96}
        y={67.045}
      >
        <tspan
          dx={5}
        >
          60.33
        </tspan>
      </text>
    </g>
    <text
      fontSize={4.5}
      textAnchor="middle"
      x={76}
      y={117.875}
    >
      Group 1
    </text>
  </g>
  <g
    transform="translate(66)"
  >
    <g
      fill="#fa6479"
      fontSize={3}
    >
      <rect
        height={-9.78}
        width={10}
        x={46}
        y={119.78}
      />
      <text
        textAnchor="middle"
        x={46}
        y={107.375}
      >
        <tspan
          dx={5}
        >
          &lt; 20
        </tspan>
      </text>
    </g>
    <g
      fill="#cb91a0"
      fontSize={3}
    >
      <rect
        height={-6}
        width={10}
        x={56}
        y={116}
      />
      <text
        textAnchor="middle"
        x={56}
        y={107.375}
      >
        <tspan
          dx={5}
        >
          &lt; 20
        </tspan>
      </text>
    </g>
    <g
      fill="#a38ca4"
      fontSize={3}
    >
      <rect
        height={-6}
        width={10}
        x={66}
        y={116}
      />
      <text
        textAnchor="middle"
        x={66}
        y={107.375}
      >
        <tspan
          dx={5}
        >
          &lt; 20
        </tspan>
      </text>
    </g>
    <g
      fill="#7482aa"
      fontSize={3}
    >
      <rect
        height={11.25}
        width={10}
        x={76}
        y={98.75}
      />
      <text
        textAnchor="middle"
        x={76}
        y={96.125}
      >
        <tspan
          dx={5}
        >
          31.25
        </tspan>
      </text>
    </g>
    <g
      fill="#35aeb7"
      fontSize={3}
    >
      <rect
        height={70}
        width={10}
        x={86}
        y={40}
      />
      <text
        textAnchor="middle"
        x={86}
        y={37.375}
      >
        <tspan
          dx={5}
        >
          90
        </tspan>
      </text>
    </g>
    <g
      fill="#01b25c"
      fontSize={3}
    >
      <rect
        height={80.22}
        width={10}
        x={96}
        y={29.78}
      />
      <text
        textAnchor="middle"
        x={96}
        y={27.155}
      >
        <tspan
          dx={5}
        >
          &gt; 100
        </tspan>
      </text>
    </g>
    <text
      fontSize={4.5}
      textAnchor="middle"
      x={76}
      y={117.875}
    >
      Group 5
    </text>
  </g>
  <path
    d="m43 110h132"
    stroke="#000"
    strokeWidth={0.1}
  />
  <g
    fill="#000000"
    fontSize={3}
    textAnchor="middle"
  >
    <text
      x={24}
      y={110}
    >
      <tspan>
        20
      </tspan>
    </text>
    <text
      x={24}
      y={104.70588235294117}
    >
      <tspan>
        25
      </tspan>
    </text>
    <text
      x={24}
      y={99.41176470588235}
    >
      <tspan>
        30
      </tspan>
    </text>
    <text
      x={24}
      y={94.11764705882354}
    >
      <tspan>
        35
      </tspan>
    </text>
    <text
      x={24}
      y={88.82352941176471}
    >
      <tspan>
        40
      </tspan>
    </text>
    <text
      x={24}
      y={83.52941176470588}
    >
      <tspan>
        45
      </tspan>
    </text>
    <text
      x={24}
      y={78.23529411764706}
    >
      <tspan>
        50
      </tspan>
    </text>
    <text
      x={24}
      y={72.94117647058823}
    >
      <tspan>
        55
      </tspan>
    </text>
    <text
      x={24}
      y={67.64705882352942}
    >
      <tspan>
        60
      </tspan>
    </text>
    <text
      x={24}
      y={62.35294117647059}
    >
      <tspan>
        65
      </tspan>
    </text>
    <text
      x={24}
      y={57.05882352941177}
    >
      <tspan>
        70
      </tspan>
    </text>
    <text
      x={24}
      y={51.76470588235294}
    >
      <tspan>
        75
      </tspan>
    </text>
    <text
      x={24}
      y={46.470588235294116}
    >
      <tspan>
        80
      </tspan>
    </text>
    <text
      x={24}
      y={41.17647058823529}
    >
      <tspan>
        85
      </tspan>
    </text>
    <text
      x={24}
      y={35.882352941176464}
    >
      <tspan>
        90
      </tspan>
    </text>
    <text
      x={24}
      y={30.588235294117652}
    >
      <tspan>
        95
      </tspan>
    </text>
    <text
      x={24}
      y={25.294117647058826}
    >
      <tspan>
        100
      </tspan>
    </text>
    <text
      fontSize="2em"
      writingMode="vertical-lr"
      x={12.5}
      y={65}
    >
      Column chart: 3 groups of 5 elements
    </text>
  </g>
  <g
    fontSize={3}
    width={80}
  >
    <rect
      fill="#fa6479"
      height={10}
      width={10}
      x={46}
      y={141}
    />
    <text
      x={61.25}
      y={146.25}
    >
      Maelstorm
    </text>
  </g>
  <g
    fontSize={3}
    width={80}
  >
    <rect
      fill="#cb91a0"
      height={10}
      width={10}
      x={112}
      y={141}
    />
    <text
      x={127.25}
      y={146.25}
    >
      Spring
    </text>
  </g>
  <g
    fontSize={3}
    width={80}
  >
    <rect
      fill="#a38ca4"
      height={10}
      width={10}
      x={46}
      y={154.5}
    />
    <text
      x={61.25}
      y={159.75}
    >
      Electro
    </text>
  </g>
  <g
    fontSize={3}
    width={80}
  >
    <rect
      fill="#7482aa"
      height={10}
      width={10}
      x={112}
      y={154.5}
    />
    <text
      x={127.25}
      y={159.75}
    >
      HBO
    </text>
  </g>
  <g
    fontSize={3}
    width={80}
  >
    <rect
      fill="#35aeb7"
      height={10}
      width={10}
      x={46}
      y={168}
    />
    <text
      x={61.25}
      y={173.25}
    >
      Netflix
    </text>
  </g>
  <g
    fontSize={3}
    width={80}
  >
    <rect
      fill="#01b25c"
      height={10}
      width={10}
      x={112}
      y={168}
    />
    <text
      x={127.25}
      y={173.25}
    >
      Amazon
    </text>
  </g>
</svg>
`;

exports[`Storyshots 1 - Charts Two Groups Of Six Columns Min Value Minus 20 Max Value 100 And Dy 18 1`] = `
<svg
  height="100%"
  viewBox="0 0 198 210"
  width="100%"
>
  <g
    transform="translate(0)"
  >
    <g
      fill="#fa6479"
      fontSize={3}
    >
      <rect
        height={10.823529411764707}
        width={10}
        x={46}
        y={99.1764705882353}
      />
      <text
        textAnchor="middle"
        x={46}
        y={96.5514705882353}
      >
        <tspan
          dx={5}
        >
          13
        </tspan>
      </text>
    </g>
    <g
      fill="#cb91a0"
      fontSize={3}
    >
      <rect
        height={15.529411764705884}
        width={10}
        x={56}
        y={94.47058823529412}
      />
      <text
        textAnchor="middle"
        x={56}
        y={91.84558823529412}
      >
        <tspan
          dx={5}
        >
          23
        </tspan>
      </text>
    </g>
    <g
      fill="#a38ca4"
      fontSize={3}
    >
      <rect
        height={20.235294117647058}
        width={10}
        x={66}
        y={89.76470588235294}
      />
      <text
        textAnchor="middle"
        x={66}
        y={87.13970588235294}
      >
        <tspan
          dx={5}
        >
          33
        </tspan>
      </text>
    </g>
    <g
      fill="#7482aa"
      fontSize={3}
    >
      <rect
        height={28.282352941176473}
        width={10}
        x={76}
        y={81.71764705882353}
      />
      <text
        textAnchor="middle"
        x={76}
        y={79.09264705882353}
      >
        <tspan
          dx={5}
        >
          50.1
        </tspan>
      </text>
    </g>
    <g
      fill="#35aeb7"
      fontSize={3}
    >
      <rect
        height={28.705882352941178}
        width={10}
        x={86}
        y={81.29411764705883}
      />
      <text
        textAnchor="middle"
        x={86}
        y={78.66911764705883}
      >
        <tspan
          dx={5}
        >
          51
        </tspan>
      </text>
    </g>
    <g
      fill="#01b25c"
      fontSize={3}
    >
      <rect
        height={33.09647058823529}
        width={10}
        x={96}
        y={76.90352941176471}
      />
      <text
        textAnchor="middle"
        x={96}
        y={74.27852941176471}
      >
        <tspan
          dx={5}
        >
          60.33
        </tspan>
      </text>
    </g>
    <text
      fontSize={4.5}
      textAnchor="middle"
      x={76}
      y={117.875}
    >
      Group 1
    </text>
  </g>
  <g
    transform="translate(66)"
  >
    <g
      fill="#fa6479"
      fontSize={3}
    >
      <rect
        height={9.51529411764706}
        width={10}
        x={46}
        y={100.48470588235294}
      />
      <text
        textAnchor="middle"
        x={46}
        y={97.85970588235294}
      >
        <tspan
          dx={5}
        >
          10.22
        </tspan>
      </text>
    </g>
    <g
      fill="#cb91a0"
      fontSize={3}
    >
      <rect
        height={11.294117647058822}
        width={10}
        x={56}
        y={98.70588235294117}
      />
      <text
        textAnchor="middle"
        x={56}
        y={96.08088235294117}
      >
        <tspan
          dx={5}
        >
          14
        </tspan>
      </text>
    </g>
    <g
      fill="#a38ca4"
      fontSize={3}
    >
      <rect
        height={11.294117647058822}
        width={10}
        x={66}
        y={98.70588235294117}
      />
      <text
        textAnchor="middle"
        x={66}
        y={96.08088235294117}
      >
        <tspan
          dx={5}
        >
          14
        </tspan>
      </text>
    </g>
    <g
      fill="#7482aa"
      fontSize={3}
    >
      <rect
        height={19.41176470588235}
        width={10}
        x={76}
        y={90.58823529411765}
      />
      <text
        textAnchor="middle"
        x={76}
        y={87.96323529411765}
      >
        <tspan
          dx={5}
        >
          31.25
        </tspan>
      </text>
    </g>
    <g
      fill="#35aeb7"
      fontSize={3}
    >
      <rect
        height={47.05882352941176}
        width={10}
        x={86}
        y={62.94117647058824}
      />
      <text
        textAnchor="middle"
        x={86}
        y={60.31617647058824}
      >
        <tspan
          dx={5}
        >
          90
        </tspan>
      </text>
    </g>
    <g
      fill="#01b25c"
      fontSize={3}
    >
      <rect
        height={51.868235294117646}
        width={10}
        x={96}
        y={58.131764705882354}
      />
      <text
        textAnchor="middle"
        x={96}
        y={55.506764705882354}
      >
        <tspan
          dx={5}
        >
          100.22
        </tspan>
      </text>
    </g>
    <text
      fontSize={4.5}
      textAnchor="middle"
      x={76}
      y={117.875}
    >
      Group 5
    </text>
  </g>
  <path
    d="m43 110h132"
    stroke="#000"
    strokeWidth={0.1}
  />
  <g
    fill="#000000"
    fontSize={3}
    textAnchor="middle"
  >
    <text
      x={24}
      y={110}
    >
      <tspan>
        -10
      </tspan>
    </text>
    <text
      x={24}
      y={101}
    >
      <tspan>
        8
      </tspan>
    </text>
    <text
      x={24}
      y={92}
    >
      <tspan>
        26
      </tspan>
    </text>
    <text
      x={24}
      y={83}
    >
      <tspan>
        44
      </tspan>
    </text>
    <text
      x={24}
      y={74}
    >
      <tspan>
        62
      </tspan>
    </text>
    <text
      x={24}
      y={65}
    >
      <tspan>
        80
      </tspan>
    </text>
    <text
      x={24}
      y={56}
    >
      <tspan>
        98
      </tspan>
    </text>
    <text
      x={24}
      y={47}
    >
      <tspan>
        116
      </tspan>
    </text>
    <text
      x={24}
      y={38}
    >
      <tspan>
        134
      </tspan>
    </text>
    <text
      x={24}
      y={29}
    >
      <tspan>
        152
      </tspan>
    </text>
    <text
      fontSize="2em"
      writingMode="vertical-lr"
      x={12.5}
      y={65}
    >
      Column chart: 3 groups of 5 elements
    </text>
  </g>
  <g
    fontSize={3}
    width={80}
  >
    <rect
      fill="#fa6479"
      height={10}
      width={10}
      x={46}
      y={141}
    />
    <text
      x={61.25}
      y={146.25}
    >
      Maelstorm
    </text>
  </g>
  <g
    fontSize={3}
    width={80}
  >
    <rect
      fill="#cb91a0"
      height={10}
      width={10}
      x={112}
      y={141}
    />
    <text
      x={127.25}
      y={146.25}
    >
      Spring
    </text>
  </g>
  <g
    fontSize={3}
    width={80}
  >
    <rect
      fill="#a38ca4"
      height={10}
      width={10}
      x={46}
      y={154.5}
    />
    <text
      x={61.25}
      y={159.75}
    >
      Electro
    </text>
  </g>
  <g
    fontSize={3}
    width={80}
  >
    <rect
      fill="#7482aa"
      height={10}
      width={10}
      x={112}
      y={154.5}
    />
    <text
      x={127.25}
      y={159.75}
    >
      HBO
    </text>
  </g>
  <g
    fontSize={3}
    width={80}
  >
    <rect
      fill="#35aeb7"
      height={10}
      width={10}
      x={46}
      y={168}
    />
    <text
      x={61.25}
      y={173.25}
    >
      Netflix
    </text>
  </g>
  <g
    fontSize={3}
    width={80}
  >
    <rect
      fill="#01b25c"
      height={10}
      width={10}
      x={112}
      y={168}
    />
    <text
      x={127.25}
      y={173.25}
    >
      Amazon
    </text>
  </g>
</svg>
`;

exports[`Storyshots 1 - Charts Two Groups Of Two Columns 1`] = `
<svg
  height="100%"
  viewBox="0 0 198 210"
  width="100%"
>
  <g
    transform="translate(0)"
  >
    <g
      fill="#fa6479"
      fontSize={3}
    >
      <rect
        height={39.992017561364996}
        width={10}
        x={46}
        y={70.007982438635}
      />
      <text
        textAnchor="middle"
        x={46}
        y={67.382982438635}
      >
        <tspan
          dx={5}
        >
          50.1
        </tspan>
      </text>
    </g>
    <g
      fill="#cb91a0"
      fontSize={3}
    >
      <rect
        height={48.15805228497305}
        width={10}
        x={56}
        y={61.84194771502695}
      />
      <text
        textAnchor="middle"
        x={56}
        y={59.21694771502695}
      >
        <tspan
          dx={5}
        >
          60.33
        </tspan>
      </text>
    </g>
    <text
      fontSize={4.5}
      textAnchor="middle"
      x={56}
      y={117.875}
    >
      Group 1
    </text>
  </g>
  <g
    transform="translate(66)"
  >
    <g
      fill="#fa6479"
      fontSize={3}
    >
      <rect
        height={71.84194771502695}
        width={10}
        x={46}
        y={38.15805228497305}
      />
      <text
        textAnchor="middle"
        x={46}
        y={35.53305228497305}
      >
        <tspan
          dx={5}
        >
          90
        </tspan>
      </text>
    </g>
    <g
      fill="#cb91a0"
      fontSize={3}
    >
      <rect
        height={80}
        width={10}
        x={56}
        y={30}
      />
      <text
        textAnchor="middle"
        x={56}
        y={27.375}
      >
        <tspan
          dx={5}
        >
          100.22
        </tspan>
      </text>
    </g>
    <text
      fontSize={4.5}
      textAnchor="middle"
      x={56}
      y={117.875}
    >
      Group 2
    </text>
  </g>
  <path
    d="m43 110h92"
    stroke="#000"
    strokeWidth={0.1}
  />
  <g
    fill="#000000"
    fontSize={3}
    textAnchor="middle"
  >
    <text
      x={24}
      y={110}
    >
      <tspan>
        0
      </tspan>
    </text>
    <text
      x={24}
      y={101.81818181818181}
    >
      <tspan>
        10
      </tspan>
    </text>
    <text
      x={24}
      y={93.63636363636364}
    >
      <tspan>
        20
      </tspan>
    </text>
    <text
      x={24}
      y={85.45454545454545}
    >
      <tspan>
        30
      </tspan>
    </text>
    <text
      x={24}
      y={77.27272727272728}
    >
      <tspan>
        40
      </tspan>
    </text>
    <text
      x={24}
      y={69.0909090909091}
    >
      <tspan>
        50
      </tspan>
    </text>
    <text
      x={24}
      y={60.90909090909091}
    >
      <tspan>
        60
      </tspan>
    </text>
    <text
      x={24}
      y={52.72727272727273}
    >
      <tspan>
        70
      </tspan>
    </text>
    <text
      x={24}
      y={44.54545454545455}
    >
      <tspan>
        80
      </tspan>
    </text>
    <text
      x={24}
      y={36.36363636363636}
    >
      <tspan>
        90
      </tspan>
    </text>
    <text
      x={24}
      y={28.181818181818187}
    >
      <tspan>
        100
      </tspan>
    </text>
    <text
      fontSize="2em"
      writingMode="vertical-lr"
      x={12.5}
      y={65}
    >
      Column chart: 3 groups, 3 elements
    </text>
  </g>
  <g
    fontSize={3}
    width={80}
  >
    <rect
      fill="#fa6479"
      height={10}
      width={10}
      x={46}
      y={141}
    />
    <text
      x={61.25}
      y={146.25}
    >
      Maelstorm
    </text>
  </g>
  <g
    fontSize={3}
    width={80}
  >
    <rect
      fill="#cb91a0"
      height={10}
      width={10}
      x={112}
      y={141}
    />
    <text
      x={127.25}
      y={146.25}
    >
      Spring
    </text>
  </g>
</svg>
`;

exports[`Storyshots 2 - Content Draft Content 1`] = `"{\\"blocks\\":[{\\"key\\":1,\\"text\\":\\"This block is draft.js content. Click here to edit the text.\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}},{\\"key\\":2,\\"text\\":\\"\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}},{\\"key\\":3,\\"text\\":\\"We are planning to add text formatting toolbar soon.\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}},{\\"key\\":4,\\"text\\":\\"\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}},{\\"key\\":5,\\"text\\":\\"Draft.js is a framework for building rich text editors in React,\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}},{\\"key\\":6,\\"text\\":\\"powered by an immutable model and abstracting over cross-browser differences.\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}],\\"entityMap\\":{}}"`;

exports[`Storyshots 2 - Content Editor Of Content 1`] = `
<div
  className="sc-VigVT pbRoL"
>
  <div
    className="sc-htpNat sc-bxivhb mui-panel ecWhHw"
    onClick={[Function]}
  >
    <div
      className="sc-ifAKCX dtaADw"
    >
      <button
        className="sc-bwzfXH mui-btn mui-btn--default mui-btn--medium uTxCW"
        onClick={[Function]}
        title="Add text block"
        type="button"
      >
        + text
      </button>
      <button
        className="sc-bwzfXH mui-btn mui-btn--default mui-btn--medium uTxCW"
        onClick={[Function]}
        title="Add sibling text block"
        type="button"
      >
        + 2 text columns
      </button>
      <button
        className="sc-bwzfXH mui-btn mui-btn--default mui-btn--medium uTxCW"
        onClick={[Function]}
        title="Add pie chart"
        type="button"
      >
        + pie chart
      </button>
      <button
        className="sc-bwzfXH mui-btn mui-btn--default mui-btn--medium uTxCW"
        onClick={[Function]}
        title="Add bar chart"
        type="button"
      >
        + bar chart
      </button>
      <button
        className="sc-bwzfXH mui-btn mui-btn--default mui-btn--medium uTxCW"
        onClick={[Function]}
        title="Add bar chart"
        type="button"
      >
        + column chart
      </button>
    </div>
  </div>
  <div
    className="sc-htpNat sc-jTzLTM mui-panel fmSAAF"
  />
</div>
`;

exports[`Storyshots 2 - Content Editor Of Draft Content 1`] = `
<div
  className="sc-VigVT pbRoL"
>
  <div
    className="sc-htpNat sc-bxivhb mui-panel ecWhHw"
    onClick={[Function]}
  >
    <div
      className="sc-ifAKCX dtaADw"
    >
      <button
        className="sc-bwzfXH mui-btn mui-btn--default mui-btn--medium uTxCW"
        onClick={[Function]}
        title="Add text block"
        type="button"
      >
        + text
      </button>
      <button
        className="sc-bwzfXH mui-btn mui-btn--default mui-btn--medium uTxCW"
        onClick={[Function]}
        title="Add sibling text block"
        type="button"
      >
        + 2 text columns
      </button>
      <button
        className="sc-bwzfXH mui-btn mui-btn--default mui-btn--medium uTxCW"
        onClick={[Function]}
        title="Add pie chart"
        type="button"
      >
        + pie chart
      </button>
      <button
        className="sc-bwzfXH mui-btn mui-btn--default mui-btn--medium uTxCW"
        onClick={[Function]}
        title="Add bar chart"
        type="button"
      >
        + bar chart
      </button>
      <button
        className="sc-bwzfXH mui-btn mui-btn--default mui-btn--medium uTxCW"
        onClick={[Function]}
        title="Add bar chart"
        type="button"
      >
        + column chart
      </button>
    </div>
  </div>
  <div
    className="sc-htpNat sc-jTzLTM mui-panel fmSAAF"
  >
    {"blocks":[{"key":1,"text":"This block is draft.js content. Click here to edit the text.","type":"unstyled","depth":0,"inlineStyleRanges":[],"entityRanges":[],"data":{}},{"key":2,"text":"","type":"unstyled","depth":0,"inlineStyleRanges":[],"entityRanges":[],"data":{}},{"key":3,"text":"We are planning to add text formatting toolbar soon.","type":"unstyled","depth":0,"inlineStyleRanges":[],"entityRanges":[],"data":{}},{"key":4,"text":"","type":"unstyled","depth":0,"inlineStyleRanges":[],"entityRanges":[],"data":{}},{"key":5,"text":"Draft.js is a framework for building rich text editors in React,","type":"unstyled","depth":0,"inlineStyleRanges":[],"entityRanges":[],"data":{}},{"key":6,"text":"powered by an immutable model and abstracting over cross-browser differences.","type":"unstyled","depth":0,"inlineStyleRanges":[],"entityRanges":[],"data":{}}],"entityMap":{}}
  </div>
</div>
`;
